[project]
name = "track-eval-io"
version = "0.1.0"
description = "Running the Pure-Ab-3D-MOT."
readme = "README.md"
authors = [
    { name = "Peter Koval", email = "koval.peter@gmail.com" }
]
keywords = ['HOTA', 'ClearMOT', 'Kitti', 'nuScenes']

requires-python = ">=3.8"
dependencies = [
    "filterpy>=1.4.5",
    "pure-ab-3d-mot>=0.2.2",
    "scipy>=1.10.1",
    "scipy-stubs>=1.14.1.3; python_version > '3.9'",
    "trackeval>=1.1.0",
]

[project.urls]
Repository = "https://github.com/kovalp/track-eval-io"
ChangeLog = "https://github.com/kovalp/track-eval-io/blob/main/CHANGELOG.md"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "bump-my-version>=1.2.2; python_version < '3.14'",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
